Resolved the jump-to navigation landing locations from being offset.

--- a/css/styles.css
+++ b/css/styles.css
@@ -114,10 +114,6 @@ ol
     text-align: center;
     width: 90%;
 }
-#featured-img
-{
-    
-}
 #mission .btn.btn-danger
 {
     background-color: #99ff99;
